--- a/.admin/project.schema.xml.1
+++ b/.admin/project.schema.xml.1
@@ -27,7 +27,7 @@
 			<unique-column name="username" />
 		</unique>
 		<validator column="email" >
-			<rule name="required" message="authy_email_required1" />
+			<rule name="required" message="authy_email_required" />
 			<rule name="unique" message="authy_email_in_use" />
 		</validator>
 		<validator column="passwd_hash" >
